--- a/surveyform.html
+++ b/surveyform.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <form action="send_email.php" method="POST">
+    <form action="send_email.php" method="GET">
         <!-- Step 1 -->
         <div class="step active">
             <h2>Step 1: Personal Information</h2>
