--- a/index.html
+++ b/index.html
@@ -716,11 +716,11 @@
                                         <div class="team-card_content">
                                             <h3 class="team-card_title"><a href="https://eterneclinic.com/doctors-profile.html">Dr.
                                                     Ajara Sayyad</a></h3>
-                                            <span class="team-card_desig">MD, DDV</span>
+                                            <span class="team-card_desig">Medical Director of the firm and MD, DDV</span>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="testimonials-item">
+                                <!-- <div class="testimonials-item">
                                     <div class="team-card">
                                         <div class="team-card_img">
                                             <img src="assets/images/team/dr.saili.webp"
@@ -732,7 +732,7 @@
                                             <span class="team-card_desig">BDS</span>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
